[tool.poetry]
name = "pdb-compare"
version = "0.1.0"
description = ""
authors = ["Leonardo Castorina <leonardo.castorina98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
